--- a/12.Border_i_box_shadow/css/style.css
+++ b/12.Border_i_box_shadow/css/style.css
@@ -2,10 +2,15 @@
     width: 400px;
     height: 100px;
     background-color: beige;
-    box-shadow: rgba(0,0,0,0.3) ;
+    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.3);
     text-align: center;
     border-radius: 20px;
 } 
+.popup p {
+    line-height: 100px;
+    font-size: 50px;
+    font-weight: 700;
+}
 
 
 .ellipse {
@@ -13,6 +18,7 @@
     width:180px;
    background-color: lime;
    border-radius: 60%;
+   margin-top: 40px;
     
 }
 .circle {
